--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,15 @@
 }
 
 
+/*//////////////////////////////<registration>/////////////////////*/
 .registr-form {
 border: 2px solid #0c2d3c;
 margin: auto;
-width: 50%;
+padding: 5px;
+width: 55%;
+}
+.reg-title{
+text-align: center;
 }
 
 /* Full-width input fields */
@@ -41,6 +46,21 @@ hr {
 border: 1px solid #f1f1f1;
 margin-bottom: 25px;
 }
+
+@media (max-width: 425px) {
+        .registr-form {
+        width: 80%;
+        }
+        .reg-title{
+        font-size: 23px;
+        }
+}
+@media (max-width: 769px) {
+        .registr-form {
+        width: 80%;
+        }
+}
+/*//////////////////////////////</registration>/////////////////////*/
 
 /* Set a style for all buttons */
 .signupbtn {
@@ -79,6 +99,7 @@ width: 50%;
 /* Add padding to container elements */
 .container {
 padding: 16px;
+display: inline-block;
 }
 
 /* Clear floats */
@@ -89,12 +110,14 @@ display: table;
 }
 
 /* Change styles for cancel button and signup button on extra small screens */
-@media screen and (max-width: 300px) {
+@media screen and (max-width: 700px) {
 .cancelbtn, .signupbtn {
   width: 100%;
 }
 }
 
+
+/*//////////////////////////////<login>/////////////////////*/
 .login-title {
 margin: 0 auto;
 text-align: center;
@@ -120,6 +143,45 @@ border: none;
 background: #f1f1f1;
 }
 
+.btn-login {
+        background-color: #6193b4;
+        height: 40px;
+        margin-top: 30px;
+        -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+        border-style: none;
+        border-radius: 8px;
+        -webkit-box-pack: end;
+            -ms-flex-pack: end;
+                justify-content: flex-end;
+        }
+        
+        .btn-login__link {
+        text-decoration: none;
+        font-size: 20px;
+        color: #fff;
+        font-family: sans-serif;
+        }
+        
+
+ @media (max-width: 425px) {
+        .login-title {
+              font-size: 22px;
+        }
+        .login-form {
+                width: 75%;
+                }
+}
+@media (max-width: 769px) { 
+        .login-form {
+                width: 75%;
+                }
+}
+
+/*//////////////////////////////</login>/////////////////////*/
+
+
+/*//////////////////////////////<header>/////////////////////*/
 .header {
 background-color: #1d182e;
 -webkit-box-sizing: border-box;
@@ -153,25 +215,6 @@ color: white;
 margin-top: 30px;
 }
 
-.btn-login {
-background-color: #6193b4;
-height: 40px;
-margin-top: 30px;
--webkit-box-sizing: border-box;
-        box-sizing: border-box;
-border-style: none;
-border-radius: 8px;
--webkit-box-pack: end;
-    -ms-flex-pack: end;
-        justify-content: flex-end;
-}
-
-.btn-login__link {
-text-decoration: none;
-font-size: 20px;
-color: #fff;
-font-family: sans-serif;
-}
 
 .head-nav {
 overflow: hidden;
@@ -268,10 +311,20 @@ margin-top: 10%;
         justify-content: center;
 }
 /*# sourceMappingURL=style.css.map */
+@media (max-width: 425px) {
+        .logo > .logo__headline {
+                font-size: 30px;
+                margin-top: 30px;
+                }
+        .logo__link-img{
+                width: 65px;
+                height: 65px;
+        }
+}
+/*//////////////////////////////</header>/////////////////////*/
 
 
-
-
+/*//////////////////////////////<footer>/////////////////////*/
 .footer-bs {
 background-color: #192e69;
 padding: 60px 40px;
@@ -319,3 +372,5 @@ margin-bottom:10px;
 @media (min-width: 768px) {
 .footer-bs .footer-nav, .footer-bs .footer-social, .footer-bs .footer-ns { border-left:solid 1px rgba(255,255,255,0.10); }
 }
+
+/*//////////////////////////////</footer>/////////////////////*/
