--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,65 +1,4 @@
-#calendarBig { /* весь календарь */ 
-    width: 100%;
-    max-width: 700px;
-    margin: 0 auto;
-    border-spacing: 0 1.5em;
-  }
-  #calendarBig td {
-    vertical-align: top;
-  }
-  #calendarBig > thead td:not(:nth-child(2)) { /* предыдущий-следующий года */ 
-    text-decoration: underline;
-    color: rgb(0, 119, 204);
-    cursor: pointer;
-  }
-  #calendarBig > thead td:not(:nth-child(2)):hover { /* если наведён курсор на предыдущий-следующий года */ 
-    color: #ff3200;
-  }
-  #calendarBig > thead td:nth-child(2) { /* текущий год */ 
-    font-size: 150%;
-    font-weight: 700;
-    color: rgb(140, 61, 2);
-  }
-  #calendarBig, #calendarBig table {
-    font: monospace;
-    line-height: 1.2em;
-    font-size: 15px;
-    text-align: center;
-  }
-  #calendarBig table { /* таблицы с месяцами выравнены по верхней границе, горизонтально — по центру */ 
-    display: inline-table;
-  }
-  #calendarBig table thead tr:nth-child(1) { /* названия месяцев */ 
-    font-size: 110%;
-    font-weight: 700;
-  }
-  #calendarBig table thead tr:last-child { /* название дней недели */ 
-    font-size: small;
-    font-weight: 700;
-    color: rgb(103, 103, 103);
-  }
-  #calendarBig table tbody td { /* дни */ 
-    color: rgb(44, 86, 122);
-  }
-  #calendarBig table tbody td:nth-child(n+6), #calendarBig .holiday { /* выходные и праздники */ 
-    color: rgb(231, 140, 92);
-  }
-  #calendarBig table tbody td.today { /* сегодня */ 
-    outline: 3px solid red;
-  }
-  #calendarBig table tbody td[title] { /* выделенные даты */ 
-    outline: 3px solid green;
-    background: yellow;
-    cursor: help;
-  }
-  #calendarBig table tbody td[title] a { /* выделенные даты-ссылки */ 
-    display: block;
-    text-decoration: none;
-  }
-  #calendarBig table tbody td[title] a:hover { /* выделенные даты-ссылки под курсором */
-    background: #fde910;
-    color: red;
-  }
+
 
 
 
@@ -268,83 +207,39 @@ body{
  }
  }
  
+ #calendar{
+  border:0px;
+  margin: 0 auto;
+}
+#calendar tbody tr{
+  height:40px;
+}
+#calendar td{ 
+  width:80px; 
+  border:0px; 
+  border:solid 1px #99FF99; 
+  font-size:22px; 
+  text-align:center;
+}
+#calendar th{
+  background-color:#4DDBFF; 
+  border:solid 1px #00CCFF; 
+  color:#ffffff;
+}
+#calendar td.none{
+  border:0px;
+}
 
+.day{ 
+  background-color:#CCFFCC; 
+  color:#00B32D;
+}
+#calendar td.today{
+  background-color:#FFFF99; 
+  border-color:#FF531A;
+}
 
-
- .tooltip { /* стиль текста, наведя или нажав на который появится пояснение */
-    display: inline-block;
-    position: relative;
-    text-indent: 0px;
-    cursor: help; /* вид курсора */
-  }
-  .tooltip > span { /* стиль появляющейся подсказки */
-    position: absolute;
-    bottom: 100%;
-    left: -20em; /* = max-width */
-    right: -20em; /* = max-width */
-    width: -moz-max-content;
-    width: -webkit-max-content;
-    width: max-content;  /* ширина подсказки может быть не более содержимого */
-    max-width: 20em;  /* ширина подсказки может быть не более 20em */
-    max-height: 80vh; /* необязательное ограничение по высоте подсказки, 1vh — это 1% от ширины окна */
-    overflow: auto;
-    visibility: hidden;
-    margin: 0 auto .4em; /* поднята на .4em над текстом, наведя или нажав на который появится пояснение */
-    padding: .3em;
-    border: solid rgb(200,200,200);
-    font-size: 90%;
-    background: #fff;
-    line-height: normal;
-    cursor: auto;
-  }
-
-  .tooltip:after { /* треугольничек под подсказкой; тут тоже везде .4em */
-    content: "";
-    position: absolute;
-    top: -.4em;
-    left: 50%;
-    visibility: hidden;
-    margin: 0 0 0 -.4em;
-    border: .4em solid;
-    border-color: rgb(200,200,200) transparent transparent transparent;
-    cursor: auto;
-  }
-  
-  .tooltip:before { /* поле между текстом, наведя или нажав на который появится пояснение, и подсказкой нужно чтобы, если перевести курсор мышки на подсказку, та не исчезла; тут тоже везде .4em */
-    content: "";
-    position: absolute;
-    top: -.4em;
-    left: 0;
-    right: 0;
-    height: .4em;
-    visibility: hidden;
-  }
-  .tooltip:hover > span,
-  .tooltip:hover:before,
-  .tooltip:hover:after,
-  .tooltip:focus > span,
-  .tooltip:focus:before,
-  .tooltip:focus:after {
-    visibility: visible;
-    transition: 0s .4s;
-  }
-  .tooltip:focus { /* убрать рамку в Хроме */
-    outline: none;
-  }
-  .tooltip.anim > span,
-  .tooltip.anim:after { /* анимация */
-    opacity: 0;
-    transform: translateY(1.5em) scale(.3);
-    transform-origin: center bottom;
-  }
-  .tooltip.anim:after {
-    transform: translateY(.7em) scale(.3); /* 1.7 = 1.5 / (1.4*2) */
-  }
-  .tooltip.anim:hover > span,
-  .tooltip.anim:hover:after,
-  .tooltip.anim:focus > span,
-  .tooltip.anim:focus:after {
-    opacity: 1;
-    transition: .6s .4s;
-    transform: translateY(0);
-  }
+.event{
+   background-color: #8A2BE2;
+   color: #191970;
+}
